2010-06-12  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/amglue/directtcp.swg: fix unterminated array

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/net.m4: remove use of AS_HELP_STRING

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader-test.c: don't expect partnum=0 on dumpfiles
	* common-src/fileheader.c: don't put partnum=1 on tape headers, etc.

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader.c: fix inaccurate partnum in such headers
	* installcheck/Amanda_Recovery_Clerk.pl: add test for recovering with
	  DUMPFILE headers

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndma_comm_dispatch.c ndmp-src/ndma_cops_query.c: fix
	  NDMOS_OPTION_NO_NDMPvX precompiler conditionals

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Device.pl: test the connect method

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndma_comm_dispatch.c: uncomment and update code
	  to support NDMP_MOVER_CONNECT via ndmta.

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Device.pod perl/Amanda/Device.swg device-src/device.c
	  device-src/device.h: add a device_connect method
	* device-src/ndmp-device.c: implement it
	* ndmp-src/ndmpconnobj.c ndmp-src/ndmpconnobj.h: add
	  ndmp_connection_mover_connect
	* perl/Amanda/Xfer.pod: update documentation using the word
	  "initiator"

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c: add S3_STORAGE_CLASS property
	* device-src/s3.c device-src/s3.h: add storage_class
	* installcheck/Amanda_Device.pl: set the property
	* man/xml-source/amanda-devices.7.xml: document it

2010-06-10  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Recovery/Planner.pm: fix matching on filelists - fixes
	  problems with amidxtaped: "Specified file list matches multiple
	  dumps"

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>