@@ -1,4 +1,7 @@
 2010-06-12  Dustin J. Mitchell <dustin@zmanda.com>
+	* perl/Amanda/Report.pm: POD overhaul
+
+2010-06-12  Dustin J. Mitchell <dustin@zmanda.com>
 	* perl/amglue/directtcp.swg: fix unterminated array
 
 2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
